JDBC-5455 Language parser (highlighter issue with registered-token assertions)
(cherry picked from commit 6b3e095e243217838e8b14c015bf731174eb12eb)